Lesson 3 add layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Learn Android Studio</string>
+    <string name="registration">Регистрация</string>
+    <string name="write_login">Введите логин</string>
+    <string name="write_email">Введите email</string>
+    <string name="write_pass">Введите пароль</string>
 </resources>
